--- a/api/config.json
+++ b/api/config.json
@@ -1,4 +1,9 @@
 {
 	"host": "192.168.22.163",
-	"port": 5000
+	"port": 5000,
+	"database": {
+		"db_name": "database",
+		"hostname": "localhost",
+		"port": 27017
+	}
 }
